// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SQL exporter snapshots > matches the MySQL golden output 1`] = `
"-- Generated by drawDB Desktop (MySQL Enhanced)
-- Diagram: Shop
-- Generated: 2024-01-02T03:04:05.000Z
SET FOREIGN_KEY_CHECKS=0;

CREATE TABLE \`users\` (
  \`id\` INT NOT NULL AUTO_INCREMENT COMMENT 'PK',
  \`email\` VARCHAR(255) NOT NULL UNIQUE,
  \`status\` ENUM('active','banned') NOT NULL DEFAULT 'active',
  \`created\` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (\`id\`),
  UNIQUE KEY \`idx_email\` (\`email\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci COMMENT='Users table';

CREATE TABLE \`orders\` (
  \`id\` BIGINT NOT NULL AUTO_INCREMENT,
  \`user_id\` INT NOT NULL,
  \`amount\` DECIMAL(12,2) DEFAULT 0.00 COMMENT 'money',
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

ALTER TABLE \`orders\` ADD CONSTRAINT \`fk_orders_user\` FOREIGN KEY (\`user_id\`) REFERENCES \`users\` (\`id\`) ON DELETE CASCADE;

SET FOREIGN_KEY_CHECKS=1;"
`;

exports[`SQL exporter snapshots > matches the Oracle golden output 1`] = `
"-- Generated by drawDB Desktop (Oracle dialect)
-- Diagram: Shop
-- Generated: 2024-01-02T03:04:05.000Z

CREATE TABLE "users" (
  "id" NUMBER(10) NOT NULL GENERATED BY DEFAULT AS IDENTITY,
  "email" VARCHAR2(255) NOT NULL UNIQUE,
  "status" VARCHAR2(10) DEFAULT 'active' NOT NULL,
  "created" TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,
  CONSTRAINT "pk_users" PRIMARY KEY ("id"),
  CONSTRAINT "chk_users_status_enum" CHECK ("status" IN ('active','banned'))
);
COMMENT ON TABLE "users" IS 'Users table';
COMMENT ON COLUMN "users"."id" IS 'PK';
CREATE UNIQUE INDEX "idx_email" ON "users" ("email");

CREATE TABLE "orders" (
  "id" NUMBER(19) NOT NULL GENERATED BY DEFAULT AS IDENTITY,
  "user_id" NUMBER(10) NOT NULL,
  "amount" NUMBER(12,2) DEFAULT 0.00,
  CONSTRAINT "pk_orders" PRIMARY KEY ("id")
);
COMMENT ON COLUMN "orders"."amount" IS 'money';

ALTER TABLE "orders" ADD CONSTRAINT "fk_orders_user" FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;"
`;

exports[`SQL exporter snapshots > matches the PostgreSQL golden output 1`] = `
"-- Generated by drawDB Desktop (PostgreSQL dialect)
-- Diagram: Shop
-- Generated: 2024-01-02T03:04:05.000Z

CREATE TYPE "role" AS ENUM ('admin', 'user');
CREATE TYPE "users_status" AS ENUM ('active', 'banned');

CREATE TABLE "users" (
  "id" SERIAL,
  "email" VARCHAR(255) NOT NULL UNIQUE,
  "status" "users_status" DEFAULT 'active' NOT NULL,
  "created" TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,
  CONSTRAINT "pk_users" PRIMARY KEY ("id")
);
COMMENT ON TABLE "users" IS 'Users table';
COMMENT ON COLUMN "users"."id" IS 'PK';
CREATE UNIQUE INDEX "idx_email" ON "users" ("email");

CREATE TABLE "orders" (
  "id" BIGSERIAL,
  "user_id" INTEGER NOT NULL,
  "amount" NUMERIC(12,2) DEFAULT 0.00,
  CONSTRAINT "pk_orders" PRIMARY KEY ("id")
);
COMMENT ON COLUMN "orders"."amount" IS 'money';

ALTER TABLE "orders" ADD CONSTRAINT "fk_orders_user" FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;"
`;
